--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <h1>Hello, world!</h1>
-  <p>This is my first static website.</p>
+  <p>This is my second static website.</p>
 </body>
 </html>
